--- a/style.css
+++ b/style.css
@@ -17,10 +17,13 @@ body {
 header {
   padding: 1rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
+  align-items: center;
   background-color: var(--secondary-color);
 }
-
+h1 {
+  color: #fff;
+}
 .search {
   background-color: transparent;
   border: 2px solid var(--primary-color);
